Narrow width overflow fixes

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -5,7 +5,7 @@ body {
 :global(.rich-text #pew-app) {
     @media (max-width: 917px){
         width: 100vw;
-        margin-left: -1.125rem;
+        margin-left: -1.55rem;
         margin-top: -40px;
     }
     :global(#section-overview), :global(#section-about){
